<resources>
    <string name="app_name">Florence Architectures</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_favorites">Favorites</string>
    <string name="contentDescription_placeholder">overridden on runtime</string>
    <string name="image_preview_action_button">more info</string>
    <string name="image_content_description">this is an image of %s</string>

    <!-- Error Messages -->
    <string name="network_error">Something gone wrong :|\nCheck your internet connection</string>
    <string name="building_error">At the moment it\'s not possible to retrieve the building information</string>

    <!-- Building detail activity -->
    <string name="label_name">Name:</string>
    <string name="label_author">Author:</string>
    <string name="label_year">Year:</string>
    <string name="label_typology">Typology:</string>
    <string name="label_address">Address:</string>
    <string name="label_category">Category</string>
    <string name="label_information">General Information</string>
    <string name="label_description">Description</string>
    <string name="label_images">Images</string>
    <string name="image_preview_description">This is a image preview</string>

    <!-- Widget -->
    <string name="image_widget_description">random building selected: tap for more info</string>

    <!-- Services KEYS -->
    <string name="ads_key" translatable="false">ca-app-pub-3940256099942544/6300978111</string><!-- testing key -->
    <string name="google_maps_key" translatable="false">[HERE]</string>
</resources>
